<resources>
    <string name="app_name">Dark Theme Android</string>
    <string name="sports_menu_item_title">Sports</string>
    <string name="search_menu_item_title">Search</string>
    <string name="theme_menu_item_title">Theme</string>
    <string name="settings_menu_title_settings">Settings</string>
    <string name="search_articles_hint">Search</string>
    <string name="preference_title_account">Account</string>
    <string name="preference_title_notifications">Notifications</string>
    <string name="preference_title_developer">Developer</string>
    <string name="preference_title_about">About</string>
    <string name="preference_summary_account">Change user account usage settings.</string>
    <string name="preference_summary_notifications">Change app notifications settings.</string>
    <string name="preference_summary_developer">Information for developers.</string>
    <string name="preference_summary_about">Read what is this app about.</string>
    <string name="title_rugby">Rugby</string>
    <string name="title_cricket">Cricket</string>
    <string name="title_basketball">Basketball</string>
    <string name="title_hockey">Hockey</string>
    <string name="title_volleyball">Volleyball</string>
    <string name="title_esports">Esports</string>
    <string name="title_kabbadi">Kabaddi</string>
    <string name="title_baseball">Baseball</string>
    <string name="title_mma">MMA</string>
    <string name="title_soccer">Soccer</string>
    <string name="title_handball">Handball</string>
    <string name="title_tennis">Tennis</string>
    <string name="subtitle_rugby">19th century</string>
    <string name="subtitle_cricket">16th century</string>
    <string name="subtitle_basketball">December 21, 1891</string>
    <string name="subtitle_hockey">19th century</string>
    <string name="subtitle_volleyball">1895</string>
    <string name="subtitle_esports">1972</string>
    <string name="subtitle_kabbadi">1921</string>
    <string name="subtitle_baseball">1869</string>
    <string name="subtitle_mma">1993</string>
    <string name="subtitle_soccer">1863</string>
    <string name="subtitle_handball">2 December 1917</string>
    <string name="subtitle_tennis">1859</string>
    <string name="on_primary">On Primary</string>
    <string name="on_secondary">On Secondary</string>
    <string name="on_primary_variant">On Primary Variant</string>
    <string name="on_secondary_variant">On Secondary Variant</string>
    <string name="on_primary_dark">On Primary Dark</string>
    <string name="on_surface">On Surface</string>
    <string name="on_error">On Error</string>
    <string name="on_accent">On Accent</string>
    <string name="on_background">On Background</string>
    <string name="about_rugby">
        Rugby union, widely known simply as rugby, is a full contact team sport that originated in
        England in the first half of the 19th century. One of the two codes of rugby football, it is
        based on running with the ball in hand. In its most common form, a game is played between two
        teams of 15 players using an oval-shaped ball on a rectangular field called a pitch. The field
        has H-shaped goalposts at both ends.
        Rugby union is a popular sport around the world, played by male and female players of all ages.
        Rules do not differ between the sexes. In 2014, there were more than 6 million people playing
        worldwide, of whom 2.36 million were registered players. World Rugby, previously called the
        International Rugby Football Board (IRFB) and the International Rugby Board (IRB), has been
        the governing body for rugby union since 1886, and currently has 101 countries as full members
        and 18 associate members.
    </string>
    <string name="about_cricket">
        Cricket is a bat-and-ball game played between two teams of eleven players on a field at the
        centre of which is a 20-metre (22-yard) pitch with a wicket at each end, each comprising two
        bails balanced on three stumps. The batting side scores runs by striking the ball bowled at
        the wicket with the bat, while the bowling and fielding side tries to prevent this and dismiss
        each player (so they are "out"). Means of dismissal include being bowled, when the ball hits
        the stumps and dislodges the bails, and by the fielding side catching the ball after it is
        hit by the bat, but before it hits the ground. When ten players have been dismissed, the
        innings ends and the teams swap roles. The game is adjudicated by two umpires, aided by a
        third umpire and match referee in international matches. They communicate with two off-field
        scorers who record the matches statistical information.
    </string>
    <string name="about_basketball">
        Basketball is a team sport in which two teams, most commonly of five players each, opposing
        one another on a rectangular court, compete with the primary objective of shooting a basketball
        (approximately 9.4 inches (24 cm) in diameter) through the defenders hoop (a basket 18 inches
        (46 cm) in diameter mounted 10 feet (3.048 m) high to a backboard at each end of the court)
        while preventing the opposing team from shooting through their own hoop. A field goal is worth
        two points, unless made from behind the three-point line, when it is worth three. After a foul,
        timed play stops and the player fouled or designated to shoot a technical foul is given one
        or more one-point free throws. The team with the most points at the end of the game wins,
        but if regulation play expires with the score tied, an additional period of play (overtime)
        is mandated.
        Players advance the ball by bouncing it while walking or running (dribbling) or by passing
        it to a teammate, both of which require considerable skill. On offense, players may use a
        variety of shots—the lay-up, the jump shot, or a dunk; on defense, they may steal the ball
        from a dribbler, intercept passes, or block shots; either offense or defense may collect a
        rebound, that is, a missed shot that bounces from rim or backboard. It is a violation to lift
        or drag ones pivot foot without dribbling the ball, to carry it, or to hold the ball with
        both hands then resume dribbling.
    </string>
    <string name="about_hockey">
        Hockey is a sport in which two teams play against each other by trying to manoeuvre a ball
        or a puck into the opponents goal using a hockey stick. There are many types of hockey such
        as bandy, field hockey, ice hockey and rink hockey.
        In most of the world, the term hockey by itself refers to field hockey, while in Canada, the
        United States, Russia and most of Eastern and Northern Europe, the term usually refers to ice
        hockey.
    </string>
    <string name="about_volleyball">
        Volleyball is a team sport in which two teams of six players are separated by a net. Each
        team tries to score points by grounding a ball on the other teams court under organized
        rules. It has been a part of the official program of the Summer Olympic Games since Tokyo
        1964.
        The complete set of rules are extensive, but play essentially proceeds as follows: a
        player on one of the teams begins a rally by serving the ball (tossing or releasing it
        and then hitting it with a hand or arm), from behind the back boundary line of the court,
        over the net, and into the receiving teams court. The receiving team must not let the
        ball be grounded within their court. The team may touch the ball up to 3 times, but individual
        players may not touch the ball twice consecutively. Typically, the first two touches are
        used to set up for an attack, an attempt to direct the ball back over the net in such a way
        that the serving team is unable to prevent it from being grounded in their court.
    </string>
    <string name="about_esports">
        Esports (also known as electronic sports, e-sports, or eSports) is a form of sport competition
        using video games. Esports often takes the form of organized, multiplayer video game
        competitions, particularly between professional players, individually or as teams. Although
        organized competitions have long been a part of video game culture, these were largely between
        amateurs until the late 2000s, when participation by professional gamers and spectatorship in
        these events through live streaming saw a large surge in popularity. By the 2010s,
        esports was a significant factor in the video game industry, with many game developers actively
        designing and providing funding for tournaments and other events.
        The most common video game genres associated with esports are multiplayer online battle arena
        (MOBA), first-person shooter (FPS), fighting, card games, battle royales, and real-time strategy
        (RTS). Popular esport franchises include League of Legends, Dota, Counter-Strike, Overwatch,
        Super Smash Bros., and StarCraft, among many others. Tournaments such as the League of Legends
        World Championship, Dota 2s International, the fighting game-specific Evolution Championship
        Series (EVO) and Intel Extreme Masters are among the most popular in esports. Many other
        competitions use a series of league play with sponsored teams, such as the Overwatch League.
        Although the legitimacy of esports as a true sporting competition remains in question, they
        have been featured alongside traditional sports in some multinational events in Asia, with
        the International Olympic Committee also having discussed their inclusion into future Olympic
        events.
    </string>
    <string name="about_kabbadi">
        Kabaddi is a contact team sport, native to the Indian subcontinent, played between two
        teams of seven players each. The objective of the game is for a single player on offense,
        referred to as a "raider", to run into the opposing teams half of a court, tag out as many
        of their defenders as possible, and return to their own half of the court, all without being
        tackled by the defenders, and in a single breath. Points are scored tagged by the raider,
        while the opposing team earns a point for stopping the raider. Players are taken out of the
        game if they are tagged or tackled, but are brought back in for each point scored by their
        team from a tag or tackle.
        It is popular in South Asia and other surrounding Asian countries. Although accounts of
        kabaddi appear in the histories of ancient India, the game was popularised as a competitive
        sport in the 20th century. It is the national sport of Bangladesh. It is the state game
        of the Indian states of Andhra Pradesh, Bihar, Haryana, Karnataka, Kerala, Maharashtra, Odisha,
        Punjab, Tamil Nadu, Telangana, and Uttar Pradesh.
        There are two major disciplines of kabaddi: so-called Punjabi kabaddi, also referred to as
        circle style, comprises traditional forms of the sport that are played on a circular field
        outdoors, while the standard style, played on a rectangular court indoors, is the discipline
        played in major professional leagues and international competitions such as the Asian Games.
    </string>
</resources>